fix: overflow wrapper content

--- a/src/scss/sections/eating.scss
+++ b/src/scss/sections/eating.scss
@@ -50,6 +50,7 @@
             padding: 1.6rem 4.3rem 1.6rem 1.6rem;
             border-radius: 2rem;
             background: var(--eating-background);
+            min-height: 10rem;
 
             span {
                 color: #1d1d1d;
@@ -61,12 +62,16 @@
                 -webkit-line-clamp: 2;
                 -webkit-box-orient: vertical;
                 overflow: hidden;
+
+                @include small-tablet {
+                    font-size: 4rem;
+                }
             }
 
             @include small-tablet {
                 padding: 3.2rem;
+                min-height: 16rem;
                 border-radius: 4rem;
-                font-size: 4rem;
             }
         }
     }
